# tornado-visualization

./: .gitignore  CMakeLists.txt  Code5  ContourRendererGLSL.cpp  ContourRendererGLSL.h  FlowDataSource.cpp  HorizontalContourLinesRenderer.cpp  HorizontalContourLinesRenderer.h  HorizontalSliceRenderer.cpp  HorizontalSliceToImageMapper.cpp  StreamLinesMapper.cpp  StreamLinesMapper.h  StreamLinesRenderer.cpp  StreamLinesRenderer.h  colormap.txt  colormap3.txt  compile_commands.json  datavolumeboundingboxrenderer.cpp  datavolumeboundingboxrenderer.h  main.cpp  mainwindow.cpp  mainwindow.h  opengldisplaywidget.cpp  opengldisplaywidget.h
data/: colormap2.txt  colormap3.txt
glsl/: lines_fshader.glsl  lines_fshader_contourRenderer.glsl  lines_fshader_imageRenderer.glsl  lines_fshader_streamRenderer.glsl  lines_gshader_pathRenderer.glsl  lines_vshader.glsl  lines_vshader_contourRenderer.glsl  lines_vshader_imageRenderer.glsl  lines_vshader_pathRenderer.glsl  marching_squares_fshader.glsl  marching_squares_gshader.glsl  marching_squares_vshader.glsl
src/: ContourRendererGLSL.cpp  ContourRendererGLSL.h  FlowDataSource.h  HorizontalContourLinesRenderer.cpp  HorizontalContourLinesRenderer.h  HorizontalSliceRenderer.cpp  HorizontalSliceRenderer.h  HorizontalSliceToContourLineMapper.cpp  HorizontalSliceToContourLineMapper.h  HorizontalSliceToImageMapper.cpp  HorizontalSliceToImageMapper.h  StreamLinesMapper.cpp  StreamLinesMapper.h  StreamLinesRenderer.cpp  datavolumeboundingboxrenderer.cpp  main.cpp  mainwindow.cpp  opengldisplaywidget.cpp  opengldisplaywidget.h
